[project]
name = "code-reading-dojo"
version = "0.1.0"
description = "Socratic code reading / review / trace trainer using Claude Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.63",
]

[project.scripts]
dojo = "dojo:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dojo"]
